Bug 342469 - X-Attributes got lost
Summary: X-Attributes got lost
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: GIT
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-04 01:07 UTC by Sandro Knauß
Modified: 2015-01-19 12:30 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 14.12.2
Sentry Crash Report:


Attachments
input file as generated by evolution (473 bytes, text/vcard)
2015-01-11 10:29 UTC, chrysn
Details
what kaddressbook produces after export (224 bytes, text/plain)
2015-01-11 10:30 UTC, chrysn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sandro Knauß 2015-01-04 01:07:04 UTC
Got an contact managed outside of kaddressbook with:
EMAIL;TYPE=OTHER;X-EVOLUTION-UI-SLOT=3:chrysn@fsfe.org

after saving this infomation is lost and saved as:
EMAIL:chrysn@fsfe.org

Reproducible: Always




Properly it is a bug inside akonadi or kcalcore.

See debian bug:
https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=773312
Comment 1 Laurent Montel 2015-01-05 06:18:33 UTC
Do you have a testcase ?
Comment 2 chrysn 2015-01-11 10:29:48 UTC
Created attachment 90344 [details]
input file as generated by evolution
Comment 3 chrysn 2015-01-11 10:30:11 UTC
Created attachment 90345 [details]
what kaddressbook produces after export
Comment 4 chrysn 2015-01-11 10:32:27 UTC
i've produced the attached test case by the following procedure (which produces the same error as using carddav; it's easier to reproduce like that, but actually matters more on carddav servers):

* on a local address book in evolution create a John Doe with work email address johndoe@example.com and private email address thejoe@freemail.example.com (version 3.12.9)
* export from evolution as from-evolution.vcf
* import to KAddressBook's Personal Contacts (version 4.14.2)
* export selected as vcard 3 with all fields exported (but not display name as full name) to unmodified-from-kaddressbook.vcf

the x-evolution-ui-slot attributes have been stripped from both email addresses.
Comment 5 Laurent Montel 2015-01-11 11:12:15 UTC
Thanks for this testcase I will able to investigate it soon
Comment 6 Laurent Montel 2015-01-11 13:21:28 UTC
Ok EMAIL doesn't support Type and extra settings
Comment 7 Laurent Montel 2015-01-12 07:03:16 UTC
Git commit 7b7dd09db88d8ccf92a5837b56a6c426265f8aa3 by Montel Laurent.
Committed on 12/01/2015 at 07:02.
Pushed by mlaurent into branch 'KDE/4.14'.

Start to fix Bug 342469 - X-Attributes got lost

M  +1    -0    kabc/CMakeLists.txt
A  +84   -0    kabc/email.cpp     [License: LGPL (v2+)]
A  +53   -0    kabc/email.h     [License: LGPL (v2+)]

http://commits.kde.org/kdepimlibs/7b7dd09db88d8ccf92a5837b56a6c426265f8aa3
Comment 8 Laurent Montel 2015-01-12 12:48:12 UTC
Ok now kabc support attribute but I need to fix akonadi-contact now (which remove attributes...)
Comment 9 Laurent Montel 2015-01-13 07:08:58 UTC
I added new unittest to be sure that X-attribute is not losing.
Now I still need to fix akonadi-contact
Comment 10 Laurent Montel 2015-01-19 12:30:39 UTC
Git commit d09d0b46868330cd2bfeb90fa071c1a14a48231c by Montel Laurent.
Committed on 19/01/2015 at 12:29.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 342469 - X-Attributes got lost

FIXED-IN: 14.12.2

M  +10   -2    akonadi/contact/editor/autotests/emaileditdialogtest.cpp
M  +42   -46   akonadi/contact/editor/emaileditwidget.cpp
M  +5    -4    akonadi/contact/editor/emaileditwidget.h

http://commits.kde.org/kdepimlibs/d09d0b46868330cd2bfeb90fa071c1a14a48231c