Fix Bug 342469 - X-Attributes got lost

FIXED-IN: 14.12.2
BUG: 342469